<resources>
    <string name="app_name">移动党建</string>

    <!--Fragment4 界面-->
    <string name="my_gerenziliao">个人资料</string>
    <string name="my_wendang">我的文档</string>
    <string name="my_danfei">我的党费</string>
    <string name="my_about">关于我们</string>
    <string name="my_fankui">意见反馈</string>

    <!--关于我们 界面-->
    <string name="about_banben">版本信息</string>
    <string name="about_lianxi">联系方式</string>
    <string name="about_guanwan">官网</string>
    <string name="about_emails">邮箱</string>

    <!--意见反馈 界面-->
    <string name="op_conhint">请输入遇到的问题或建议......</string>
    <string name="op_num">500字</string>
    <string name="op_phone">联系电话</string>
    <string name="op_phonehint">请输入您的联系电话 (选填)</string>
    <string name="op_btn">提交</string>

    <!--党员详情 界面-->
    <string name="pbd_title">党员详情</string>
    <string name="pbd_set">设置备注和标签</string>
    <string name="pbd_phone">拨打电话</string>
    <string name="pbd_sendduan">发送短信</string>
    <string name="pbd_add">添加到通讯录</string>

    <!--掌上党校 界面-->
    <string name="pps_title">掌上党校</string>
    <string name="pps_renwu">人物长廊</string>
    <string name="pps_zhangchegn">党的章程</string>
    <string name="pps_dangguidangji">党规党纪</string>

<string name="djdg">第一章 总则

第一条 为了发展党内民主，健全党内生活，坚持民主集中制原则，增强党的生机活力，保障党员权利的正常行使和不受侵犯，根据《中国共产党章程》，制定本条例。
第二条 党员享有的党章规定的各项权利必须受到尊重和保护，党的任何一级组织、任何党员都无权剥夺。
第三条 坚持在党的纪律面前人人平等，不允许任何党员享有特权。
第四条 坚持权利与义务相统一。党员应当正确行使党章规定的各项权利，并在宪法和法律的范围内活动，同时必须履行党章规定的义务，不得侵犯其他党员的权利。
第五条 对任何侵犯党员权利的行为，都应当予以追究；情节严重的，必须给予党纪处分。对侵犯党员权利行为的认定和处理，应当以事实为根据，以党章和其他党内法规为准绳。</string>
    <!--党的章程一级 界面-->
    <string name="tcop">党的章程</string>
    <string name="tcop_tit">总 纲</string>
    <string name="tcop_con">中国共产党是中国工人阶级的先锋队，同时是中国人民和中华民族的先锋队，是中国特色社会主义事业的领导核心，代表中国先进生产力的发展要求，代表中国先进文化的前进方向，代表中国最广大人民的根本利益。党的最高理想和最终目标是实现共产主义。
中国共产党以马克思列宁主义、毛泽东思想、邓小平理论、“三个代表”重要思想和科学发展观作为自己的行动指南。
马克思列宁主义揭示了人类社会历史发展的规律，它的基本原理是正确的，具有强大的生命力。中国共产党人追求的共产主义最高理想，只有在社会主义社会充分发展和高度发达的基础上才能实现。社会主义制度的发展和完善是一个长期的历史过程。坚持马克思列宁主义的基本原理，走中国人民自愿选择的适合中国国情的道路，中国的社会主义事业必将取得最终的胜利。
以毛泽东同志为主要代表的中国共产党人，把马克思列宁主义的基本原理同中国革命的具体实践结合起来，创立了毛泽东思想。毛泽东思想是马克思列宁主义在中国的运用和发展，是被实践证明了的关于中国革命和建设的正确的理论原则和经验总结，是中国共产党集体智慧的结晶。在毛泽东思想指引下，中国共产党领导全国各族人民，经过长期的反对帝国主义、封建主义、官僚资本主义的革命斗争，取得了新民主主义革命的胜利，建立了人民民主专政的中华人民共和国；建国以后，顺利地进行了社会主义改造，完成了从新民主主义到社会主义的过渡，确立了社会主义基本制度，发展了社会主义的经济、政治和文化。
十一届三中全会以来，以邓小平同志为主要代表的中国共产党人，总结建国以来正反两方面的经验，解放思想，实事求是，实现全党工作中心向经济建设的转移，实行改革开放，开辟了社会主义事业发展的新时期，逐步形成了建设中国特色社会主义的路线、方针、政策，阐明了在中国建设社会主义、巩固和发展社会主义的基本问题，创立了邓小平理论。邓小平理论是马克思列宁主义的基本原理同当代中国实践和时代特征相结合的产物，是毛泽东思想在新的历史条件下的继承和发展，是马克思主义在中国发展的新阶段，是当代中国的马克思主义，是中国共产党集体智慧的结晶，引导着我国社会主义现代化事业不断前进。
十三届四中全会以来，以江泽民同志为主要代表的中国共产党人，在建设中国特色社会主义的实践中，加深了对什么是社会主义、怎样建设社会主义和建设什么样的党、怎样建设党的认识，积累了治党治国新的宝贵经验，形成了“三个代表”重要思想。“三个代表”重要思想是对马克思列宁主义、毛泽东思想、邓小平理论的继承和发展，反映了当代世界和中国的发展变化对党和国家工作的新要求，是加强和改进党的建设、推进我国社会主义自我完善和发展的强大理论武器，是中国共产党集体智慧的结晶，是党必须长期坚持的指导思想。始终做到“三个代表”，是我们党的立党之本、执政之基、力量之源。
十六大以来，以胡锦涛同志为主要代表的中国共产党人，坚持以邓小平理论和“三个代表”重要思想为指导，根据新的发展要求，深刻认识和回答了新形势下实现什么样的发展、怎样发展等重大问题，形成了以人为本、全面协调可持续发展的科学发展观。科学发展观，是同马克思列宁主义、毛泽东思想、邓小平理论、“三个代表”重要思想既一脉相承又与时俱进的科学理论，是马克思主义关于发展的世界观和方法论的集中体现，是马克思主义中国化最新成果，是中国共产党集体智慧的结晶，是发展中国特色社会主义必须坚持和贯彻的指导思想。
改革开放以来我们取得一切成绩和进步的根本原因，归结起来就是：开辟了中国特色社会主义道路，形成了中国特色社会主义理论体系，确立了中国特色社会主义制度。全党同志要倍加珍惜、长期坚持和不断发展党历经艰辛开创的这条道路、这个理论体系、这个制度，高举中国特色社会主义伟大旗帜，为实现推进现代化建设、完成祖国统一、维护世界和平与促进共同发展这三大历史任务而奋斗。
我国正处于并将长期处于社会主义初级阶段。这是在经济文化落后的中国建设社会主义现代化不可逾越的历史阶段，需要上百年的时间。我国的社会主义建设，必须从我国的国情出发，走中国特色社会主义道路。在现阶段，我国社会的主要矛盾是人民日益增长的物质文化需要同落后的社会生产之间的矛盾。由于国内的因素和国际的影响，阶级斗争还在一定范围内长期存在，在某种条件下还有可能激化，但已经不是主要矛盾。我国社会主义建设的根本任务，是进一步解放生产力，发展生产力，逐步实现社会主义现代化，并且为此而改革生产关系和上层建筑中不适应生产力发展的方面和环节。必须坚持和完善公有制为主体、多种所有制经济共同发展的基本经济制度，坚持和完善按劳分配为主体、多种分配方式并存的分配制度，鼓励一部分地区和一部分人先富起来，逐步消灭贫穷，达到共同富裕，在生产发展和社会财富增长的基础上不断满足人民日益增长的物质文化需要，促进人的全面发展。发展是我们党执政兴国的第一要务。各项工作都要把有利于发展社会主义社会的生产力，有利于增强社会主义国家的综合国力，有利于提高人民的生活水平，作为总的出发点和检验标准，尊重劳动、尊重知识、尊重人才、尊重创造，做到发展为了人民、发展依靠人民、发展成果由人民共享。跨入新世纪，我国进入全面建设小康社会、加快推进社会主义现代化的新的发展阶段。必须按照中国特色社会主义事业总体布局，全面推进经济建设、政治建设、文化建设、社会建设、生态文明建设。在新世纪新阶段，经济和社会发展的战略目标是，巩固和发展已经初步达到的小康水平，到建党一百年时，建成惠及十几亿人口的更高水平的小康社会；到建国一百年时，人均国内生产总值达到中等发达国家水平，基本实现现代化。</string>


    <!--二维码-->
    <string name="app_version">for Android V</string>
    <string name="menu_settings">Settings</string>
    <string name="home_right_title">Categories</string>
    <string name="button_download_text">Download</string>
    <string name="button_done_text">Done</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel_text">Cancel</string>
    <string name="button_yes">Yes</string>
    <string name="button_delete">Delete</string>
    <string name="bookmark_warning">Bookmarks attached to the magazine will be deleted simultaneously</string>
    <string name="button_ok">OK</string>
    <string name="login">Login</string>
    <string name="waiting">Please wait. . .</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">权限获取失败，无法打开相机，请到设置中开放相机权限</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="preview_msg">&#160;preview pages available,click Download for more.</string>
    <string name="onsite_checked">Onsite Checked</string>
    <string name="license_verified">License Verified</string>
    <string name="share_linkedin">Share on Linkedin</string>
    <string name="share_twitter">Share on Twitter</string>
    <string name="times">Times</string>
    <string name="time">Time</string>
    <string name="scan_text">放入框中即可进行二维码扫描</string>
</resources>


