<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/huiwhite"
    tools:context="com.example.a25908.partybuild.Activitys.OpinionActivity">

    <include
        layout="@layout/headbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/bg_bg"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/op_et"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="top"
            android:maxLength="300"
            android:hint="请输入遇到的问题或建议"
            android:background="@drawable/et_shape"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="500字"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:background="@drawable/bg_bg"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/op_phone"/>
        <EditText
            android:id="@+id/op_phone"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="@string/op_phonehint"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/et_shape"
            />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/op_btn"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/opbtn_bg"/>
</LinearLayout>
