<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linssss"
    android:background="@color/huiwhite"
    tools:context="com.example.a25908.partybuild.Activitys.PartymembersdetailsActivity">
    <include
        layout="@layout/headbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <com.example.a25908.partybuild.Views.RoundImageView
            android:id="@+id/pmd_img"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
         />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/pbd_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="安以轩"/>
                <TextView
                    android:id="@+id/pbd_Notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:layout_marginLeft="30dp"
                   />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/pbd_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="32岁"/>
                <TextView
                    android:id="@+id/pbd_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="男"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pbd_setNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:text="@string/pbd_set"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/huise"/>
    <LinearLayout
        android:id="@+id/pbd_dangfei"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:text="党费查询和缴纳"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="vertical">
        <TextView
            android:id="@+id/pbd_phone"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="电话："/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/huise"/>
        <TextView
            android:id="@+id/pbd_dangwei"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="单位："/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/huise"/>
        <TextView
            android:id="@+id/pbd_zhiwu"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="职务："/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_phone"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/pbd_phone"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/opbtn_bg"
      />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/pbd_sendduan"
        android:textColor="@color/black"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_bg"/>

    <Button
        android:id="@+id/btn_Addt"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/pbd_add"
        android:textColor="@color/black"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_bg"/>
</LinearLayout>
